fix (styles): Change paragraph text alignment from center to left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ h1 {
 
 p {
     color: #cccccc;
-    text-align: center;
+    text-align: left;
 }
 
 .guitar-box {
